ENHANCEMENT: Facebook events can now be pulled by Facebook Graph API (requires a proper Facebook App configuration, preferably with a Facebook Business Manager account).

--- a/lang/de.yml
+++ b/lang/de.yml
@@ -2,8 +2,31 @@ de:
   SilverCart\FacebookPlugins\Extensions\SiteConfigExtension:
     DefaultCode: "Standard Facebook Plugin SDK Code"
     DefaultCodeDesc: "Kopieren Sie diesen Code in das Feld \"Facebook Plugin SDK Code\", um Facebook Plugins verwenden zu können."
+    FacebookAccessToken: "Facebook Zugriffsschlüssel"
+    FacebookAppID: "Facebook App-ID"
+    FacebookAppConnection: "Facebook-App Verbindungseinstellungen"
+    FacebookDefaultAccessToken: "Facebook Standard-Zugriffsschlüssel"
+    FacebookPageID: "Facebook Seiten-ID"
     FacebookPluginSDKCode: "Facebook Plugin SDK Code"
     FacebookPluginSDKCodeDesc: "Der Facebook Plugin SDK Code wird benötigt, um Facebook Plugins verwenden zu können."
+    FacebookAppSecret: "Facebook App-Secret"
+  SilverCart\FacebookPlugins\Model\Event:
+    PLURALNAME: "Facebook Events"
+    SINGULARNAME: "Facebook Event"
+    Description: "Beschreibung"
+    EndTime: "Ended am"
+    EventTimes: "Termine"
+    FacebookID: "Facebook ID"
+    Name: "Name"
+    Place: "Ort / Region"
+    StartTime: "Beginnt am"
+  SilverCart\FacebookPlugins\Model\EventTime:
+    PLURALNAME: "Facebook Event Termine"
+    SINGULARNAME: "Facebook Event Termin"
+    EndTime: "Ended am"
+    Event: "Event"
+    FacebookID: "Facebook ID"
+    StartTime: "Beginnt am"
   SilverCart\FacebookPlugins\Model\Widgets\PagePluginWidget:
     CMSTITLE: "Facebook Seiten-Plugin"
     DESCRIPTION: "Dieses Widget zeigt ein konfigurierbares Facebook Seiten-Plugin an."
