--- a/lang/en.yml
+++ b/lang/en.yml
@@ -2,8 +2,31 @@ de:
   SilverCart\FacebookPlugins\Extensions\SiteConfigExtension:
     DefaultCode: "Default Facebook Plugin SDK Code"
     DefaultCodeDesc: "To be able to use Facebook Plugin Widgets, copy this code into the field \"Facebook Plugin SDK Code\"."
+    FacebookAccessToken: "Facebook Access Token"
+    FacebookAppID: "Facebook App ID"
+    FacebookAppConnection: "Facebook App Connection Settings"
+    FacebookDefaultAccessToken: "Facebook Default Access Token"
+    FacebookPageID: "Facebook Page ID"
     FacebookPluginSDKCode: "Facebook Plugin SDK Code"
     FacebookPluginSDKCodeDesc: "The Facebook Plugin SDK Code is needed to use Facebook Plugins."
+    FacebookAppSecret: "Facebook App Secret"
+  SilverCart\FacebookPlugins\Model\Event:
+    PLURALNAME: "Facebook Events"
+    SINGULARNAME: "Facebook Event"
+    Description: "Description"
+    EndTime: "Ends on"
+    EventTimes: "Times"
+    FacebookID: "Facebook ID"
+    Name: "Name"
+    Place: "Place / Region"
+    StartTime: "Starts on"
+  SilverCart\FacebookPlugins\Model\EventTime:
+    PLURALNAME: "Facebook Event Times"
+    SINGULARNAME: "Facebook Event Time"
+    EndTime: "Ends on"
+    Event: "Event"
+    FacebookID: "Facebook ID"
+    StartTime: "Starts on"
   SilverCart\FacebookPlugins\Model\Widgets\PagePluginWidget:
     CMSTITLE: "Facebook Page Plugin"
     DESCRIPTION: "This widget shows a custom Facebook Page Plugin."
