--- a/lang/de.yml
+++ b/lang/de.yml
@@ -13,11 +13,13 @@ de:
   SilverCart\FacebookPlugins\Model\Event:
     PLURALNAME: "Facebook Events"
     SINGULARNAME: "Facebook Event"
+    Cover: "Cover-Bild"
     Description: "Beschreibung"
     EndTime: "Ended am"
     EventTimes: "Termine"
     FacebookID: "Facebook ID"
     Name: "Name"
+    OpenInFacebook: "Auf Facebook öffnen"
     Place: "Ort / Region"
     StartTime: "Beginnt am"
   SilverCart\FacebookPlugins\Model\EventTime:
@@ -27,6 +29,16 @@ de:
     Event: "Event"
     FacebookID: "Facebook ID"
     StartTime: "Beginnt am"
+  SilverCart\FacebookPlugins\Model\Pages\EventsPage:
+    PLURALNAME: "Facebook Events-Seiten"
+    SINGULARNAME: "Facebook Events-Seite"
+    LoadAdditionalEvents: "Weitere Veranstaltungen laden"
+    PageXofYPlural: "Seite {current} von {pages} | {items} Veranstaltungen auf {pages} Seiten"
+    PageXofYSingular: "{items} Veranstaltungen auf einer Seite"
+    PastEvents: "Vergangene Veranstaltungen"
+    ShowAll: "Alle anzeigen"
+    ShowMore: "Weitere Veranstaltungen"
+    UpcomingEvents: "Bevorstehende Veranstaltungen"
   SilverCart\FacebookPlugins\Model\Widgets\PagePluginWidget:
     CMSTITLE: "Facebook Seiten-Plugin"
     DESCRIPTION: "Dieses Widget zeigt ein konfigurierbares Facebook Seiten-Plugin an."
@@ -45,3 +57,9 @@ de:
     HideCoverDesc: "Titelbild im Header verbergen."
     ShowFacePile: "Gesichter des/der Freundes/Freund/in anzeigen"
     ShowFacePileDesc: "Profilfotos anzeigen, wenn Freunde dies mit \"Gefällt mir\" markieren."
+  SilverCart\FacebookPlugins\Model\Widgets\UpcomingEventsWidget:
+    CMSTITLE: "Bevorstehende Facebook Veranstaltungen"
+    DESCRIPTION: "Dieses Widget zeigt bevorstehende Facebook Veranstaltungen an."
+    TITLE: "Bevorstehende Facebook Veranstaltungen"
+    EventQuantity: "Anzahl Veranstaltungen"
+    EventQuantityDesc: "Anzahl der bevorstehenden Veranstaltungen, die angezeigt werden sollen."
